--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   sqflite: any
   path_provider: any
   anim_search_bar: ^2.0.2
-  easy_search_bar: ^2.3.1
+  flutter_staggered_grid_view: ^0.6.2
+  flutter_sticky_header: ^0.6.4
 
 dev_dependencies:
   flutter_test:
