--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   anim_search_bar: ^2.0.2
   flutter_staggered_grid_view: ^0.6.2
   flutter_sticky_header: ^0.6.4
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
